kubernetes/addons/observability/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    gateway.edinstance.com/route-access: "true"
