kubernetes/addons/observability/grafana-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway-system
  hostnames:
    - grafana.local.edinstance.com
    - grafana.lab.edinstance.com
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
